@@ -1,5 +1,6 @@
 2.0.0a24
  - implemented polygon filters
+ - condense context menus, add export context menu to all plots
 2.0.0a23
  - add more update functions to fix frozen macOS app
  - improve plot visualizations
